# absurd-test

./: .env.example  DEPLOY.md  Procfile  README.md  dev.yml  example.env  pyproject.toml
benchmarks/: README.md  stress_test.py
migrations/: env.py
migrations/versions/: 02283072aa0f_add_agent_jobs_table.py  bad30ed4885a_add_tag_to_jobs_and_webhooks_table.py
scripts/: bootstrap.sh  reset_db.sh
src/absurd_test/: agent.py  config.py  db.py  main.py  models.py  oblique_strategies.py  worker.py
src/absurd_test/sql/: absurd.sql
src/absurd_test/templates/: about.html  admin.html  base.html  index.html  job.html
src/absurd_test/templates/partials/: jobs.html  webhooks.html
