[project]
name = "absurd-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "absurd-sdk",
    "alembic>=1.17.2",
    "fastapi>=0.122.0",
    "hatchling>=1.28.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "psycopg[binary]>=3.2.13",
    "pydantic-ai>=1.25.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/absurd_test"]

[tool.uv.sources]
absurd-sdk = { git = "https://github.com/earendil-works/absurd.git", subdirectory = "sdks/python" }
